...
  "Riboflavin (B2)": "MG",
  "Niacin (B3)": "mg",
  "Vitamin B6": "mg",
  "Folate equivalent (total)": "µg",
  "Folate (food)": "µg",
  "Folic acid": "µg",
  "Vitamin B12": "µg",
  "Vitamin D": "µg",
  "Vitamin E": "mg",
  "Vitamin K": "µg",
  "Sugar alcohol": "g",
  "Water": "g"
};
...
