...
    child: MyApp(title: 'ReshitoUDC'),
  ));
}

class FormState extends ChangeNotifier {
  List<String> filterDropDown = [
    "Alcohol-cocktail",
    "Alcohol-free",
    "Celery-free",
    "Crustacean-Free",
    "Dairy-free",
    "Egg-free",
    "Fish-free",
...
