...
                    title: Text(
                      e,
                    ),
                  );
                }).toList(),
              ),
              TextButton(key: ValueKey("nutrients"),
                  style: TextButton.styleFrom(
                      backgroundColor: color30, foregroundColor: Colors.black),
                  onPressed: () {
                    Navigator.push(context,
                        MaterialPageRoute(builder: (context) {
                      return NutrientList(
...
